fix: modificados estilos para que los tags no hagan overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -340,6 +340,9 @@
   .h-full {
     height: 100%;
   }
+  .h-screen {
+    height: 100vh;
+  }
   .min-h-full {
     min-height: 100%;
   }
